# News-Radar-project

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  start-newsradar.bat  vercel.json
api/: app.py  news.py  requirements.txt
app/: globals.css  layout.jsx  page.jsx
core/: Cargo.toml
core/src/: main.rs
web/: package.json
web/app/: globals.css  page.jsx
